# SpoutHack

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
src/: ShadowManager.cpp  layout_mode.cpp  layout_mode.hpp  main.cpp
src/hooks/: PlayLayerHooks.cpp
